[이치우] NO_TEARS 예측 모델 제작 중

--- a/Logistic_reg.ipynb
+++ b/Logistic_reg.ipynb
@@ -125,6 +125,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "2c9ebb50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score (weighted): 0.9728258308349457\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# F1-score만 출력\n",
+    "print(\"F1 Score (weighted):\", f1_score(y_test, y_pred, average='weighted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "ea2831a5",
    "metadata": {},
