--- a/NOTEARS_prediction.ipynb
+++ b/NOTEARS_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "05343422",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/xunzheng/notears.git\n",
-      "  Cloning https://github.com/xunzheng/notears.git to c:\\users\\user\\appdata\\local\\temp\\pip-req-build-a39qwgql\n",
+      "  Cloning https://github.com/xunzheng/notears.git to c:\\users\\user\\appdata\\local\\temp\\pip-req-build-h3crbe5c\n",
       "  Resolved https://github.com/xunzheng/notears.git to commit eb06eaf08ca90501a8caa4062d62466747ba3cec\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/xunzheng/notears.git 'C:\\Users\\User\\AppData\\Local\\Temp\\pip-req-build-a39qwgql'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/xunzheng/notears.git 'C:\\Users\\User\\AppData\\Local\\Temp\\pip-req-build-h3crbe5c'\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "bd94e49d",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1eaa3879",
    "metadata": {},
    "outputs": [
@@ -114,8 +114,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "22498abd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "\n",
+    "# DAG 기반으로 선택된 인과 feature 목록\n",
+    "# edge를 하나 이상 보낸 feature 선택\n",
+    "causal_features = [\n",
+    "    \"capitalization_ratio\", \"longtermdebt_invcap\", \"totaldebt_invcap\",\n",
+    "    \"leverage_ratio\", \"asset_liabilities\", \"rect_turn\",\n",
+    "    \"asset_turnover\", \"roe\",\n",
+    "]\n",
+    "\n",
+    "# Feature, label 분리\n",
+    "X = df[causal_features]\n",
+    "y = df[\"label\"]\n",
+    "\n",
+    "# train/validation 분리\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(X, y, stratify=y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7873239e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9669949846437438"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Logistic Regression\n",
+    "log_model = LogisticRegression(max_iter=1000, solver=\"lbfgs\")\n",
+    "log_model.fit(X_train, y_train)\n",
+    "log_preds = log_model.predict(X_validation)\n",
+    "log_auc = roc_auc_score(y_validation, log_model.predict_proba(X_validation)[:, 1])\n",
+    "log_report = classification_report(y_validation, log_preds, output_dict=True)\n",
+    "\n",
+    "log_report[\"weighted avg\"][\"f1-score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "711928ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\xgboost\\core.py:158: UserWarning: [15:11:02] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9767151182751399"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XGBoost Classifier\n",
+    "xgb_model = XGBClassifier(use_label_encoder=False, eval_metric=\"logloss\", random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_preds = xgb_model.predict(X_validation)\n",
+    "xgb_auc = roc_auc_score(y_validation, xgb_model.predict_proba(X_validation)[:, 1])\n",
+    "xgb_report = classification_report(y_validation, xgb_preds, output_dict=True)\n",
+    "\n",
+    "xgb_report[\"weighted avg\"][\"f1-score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "687d8722",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.8466935898270983), np.float64(0.8913303080964892))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_auc, xgb_auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3656ef9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "\n",
+    "# DAG 기반으로 선택된 인과 feature 목록\n",
+    "# edge를 하나 이상 받은 feature 선택\n",
+    "causal_features = [\n",
+    "    \"capitalization_ratio\", \"roa\", \"debt_ratio\", \"debt_ratio2\",\n",
+    "    \"leverage_ratio\", \"asset_liabilities\",\n",
+    "]\n",
+    "\n",
+    "# Feature, label 분리\n",
+    "X = df[causal_features]\n",
+    "y = df[\"label\"]\n",
+    "\n",
+    "# train/validation 분리\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(X, y, stratify=y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "856b18d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\xgboost\\core.py:158: UserWarning: [15:27:56] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9669520226037189"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XGBoost Classifier\n",
+    "xgb_model = XGBClassifier(use_label_encoder=False, eval_metric=\"logloss\", random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_preds = xgb_model.predict(X_validation)\n",
+    "xgb_auc = roc_auc_score(y_validation, xgb_model.predict_proba(X_validation)[:, 1])\n",
+    "xgb_report = classification_report(y_validation, xgb_preds, output_dict=True)\n",
+    "\n",
+    "xgb_report[\"weighted avg\"][\"f1-score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0a419863",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "leverage_ratio         -0.075390\n",
+       "asset_liabilities       0.046795\n",
+       "roe                     0.012413\n",
+       "asset_turnover         -0.108731\n",
+       "debt_ratio             -0.058530\n",
+       "debt_ratio2            -0.080579\n",
+       "roa                     0.006480\n",
+       "capitalization_ratio   -0.073564\n",
+       "longtermdebt_invcap    -0.069985\n",
+       "totaldebt_invcap       -0.102848\n",
+       "cash_debt              -0.005030\n",
+       "debt_ebitda            -0.037711\n",
+       "rect_turn              -0.004945\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from notears.linear import notears_linear\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 데이터 전처리\n",
+    "df = pd.read_csv(\"training_data.csv\")\n",
+    "# X = df.values\n",
+    "# label 제거 필요\n",
+    "X = df.drop(columns=[\"Unnamed: 0\", \"label\"]).values\n",
+    "X = StandardScaler().fit_transform(X)\n",
+    "\n",
+    "feature_names = df.drop(columns=[\"Unnamed: 0\", \"label\"]).columns.tolist()\n",
+    "n_features = len(feature_names)\n",
+    "\n",
+    "# NOTEARS 실행\n",
+    "W = notears_linear(X, lambda1=0.1, loss_type='l2')\n",
+    "\n",
+    "# feature 인과 관계\n",
+    "# edges_corr = {\n",
+    "#     (\"rect_turn\", \"asset_liabilities\"): 0.36,\n",
+    "#     (\"asset_liabilities\", \"debt_ratio\"): -0.82,\n",
+    "#     (\"leverage_ratio\", \"debt_ratio\"): 0.63,\n",
+    "#     (\"totaldebt_invcap\", \"leverage_ratio\"): 0.36,\n",
+    "#     (\"totaldebt_invcap\", \"debt_ratio2\"): 0.45,\n",
+    "#     (\"longtermdebt_invcap\", \"capitalization_ratio\"): 0.8,\n",
+    "#     (\"capitalization_ratio\", \"dept_ratio2\"): 0.58,\n",
+    "#     (\"roe\", \"roa\"): 0.4,\n",
+    "#     (\"asset_turnover\", \"roa\"): 0.43,\n",
+    "# }\n",
+    "\n",
+    "# 각 feature의 DAG 내 영향력 (outgoing edge weight 합)\n",
+    "outgoing_weights = W.sum(axis=1)\n",
+    "\n",
+    "# 각 feature와 label 간의 상관계수\n",
+    "corrs_with_label = df[feature_names].corrwith(df[\"label\"])\n",
+    "\n",
+    "# 결과 정리\n",
+    "dag_vs_label_df = pd.DataFrame({\n",
+    "    \"feature\": feature_names,\n",
+    "    \"DAG_outgoing_sum\": outgoing_weights,\n",
+    "    \"corr_with_label\": corrs_with_label\n",
+    "}).sort_values(by=[\"DAG_outgoing_sum\"], ascending=False)\n",
+    "\n",
+    "corrs_with_label\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "eeb85e72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "\n",
+    "# DAG 기반으로 선택된 인과 feature 목록\n",
+    "# root node feature 선택\n",
+    "causal_features = [\n",
+    "    \"longtermdebt_invcap\", \"totaldebt_invcap\",\n",
+    "    \"rect_turn\", \"asset_turnover\", \"roe\",\n",
+    "]\n",
+    "\n",
+    "# Feature, label 분리\n",
+    "X = df[causal_features]\n",
+    "y = df[\"label\"]\n",
+    "\n",
+    "# train/validation 분리\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(X, y, stratify=y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "28cf478c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\xgboost\\core.py:158: UserWarning: [15:47:52] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9779900681187901"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XGBoost Classifier\n",
+    "xgb_model = XGBClassifier(use_label_encoder=False, eval_metric=\"logloss\", random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_preds = xgb_model.predict(X_validation)\n",
+    "xgb_auc = roc_auc_score(y_validation, xgb_model.predict_proba(X_validation)[:, 1])\n",
+    "xgb_report = classification_report(y_validation, xgb_preds, output_dict=True)\n",
+    "\n",
+    "xgb_report[\"weighted avg\"][\"f1-score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "166df5d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "\n",
+    "# DAG 기반으로 선택된 인과 feature 목록\n",
+    "# root node feature 선택\n",
+    "causal_features = [\n",
+    "    \"roa\", \"debt_ratio\", \"debt_ratio2\"\n",
+    "]\n",
+    "\n",
+    "# Feature, label 분리\n",
+    "X = df[causal_features]\n",
+    "y = df[\"label\"]\n",
+    "\n",
+    "# train/validation 분리\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(X, y, stratify=y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1e8b71d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\xgboost\\core.py:158: UserWarning: [15:55:02] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9665755132400695"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# XGBoost Classifier\n",
+    "xgb_model = XGBClassifier(use_label_encoder=False, eval_metric=\"logloss\", random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgb_preds = xgb_model.predict(X_validation)\n",
+    "xgb_auc = roc_auc_score(y_validation, xgb_model.predict_proba(X_validation)[:, 1])\n",
+    "xgb_report = classification_report(y_validation, xgb_preds, output_dict=True)\n",
+    "\n",
+    "xgb_report[\"weighted avg\"][\"f1-score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915a7cd7",
    "metadata": {},
    "outputs": [],
    "source": []
