--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "cd202dcb",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "70d07e28",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\xgboost\\core.py:158: UserWarning: [11:26:55] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\xgboost\\core.py:158: UserWarning: [15:15:38] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -113,7 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "16f1a68f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score (weighted): 0.9854776101501231\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# F1-score만 출력\n",
+    "print(\"F1 Score (weighted):\", f1_score(y_test, y_pred, average='weighted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "2e0cefaf",
    "metadata": {},
    "outputs": [
